# clash-sub

./: AGENTS.md  Cargo.toml  README.md  wrangler.toml
.github/workflows/: deploy.yml
src/: converter.rs  lib.rs
tests/: converter_tests.rs
