[package]
name = "clash-sub"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
worker = { version = "0.7", features = ["http"] }
worker-macros = { version = "0.7", features = ["http"] }
